--- a/JQtodo.html
+++ b/JQtodo.html
@@ -45,15 +45,16 @@
                 <button type="button" class="add btn btn-primary" id='id-add'>add</button>
             </div>
             <div class="" id ='id-todo-list'>
-                <div class="todo-cell" >
+                <!-- <div class="todo-cell" >
                     <!-- <button class='btn-complete btn btn-primary' type="button" name="button">complete</button>
                     <button class='btn-del btn btn-primary' type="button" name="button">del</button>
                     <button class='btn-edit btn btn-primary' type="button" name="button">edit</button>
                     <span class='span input form-control'></span> -->
-                </div>
+                </div> -->
             </div>
         </div>
         <script src='todo.js' type="text/javascript">
         </script>
+
     </body>
 </html>
